# apply-m

./: .gitignore  LICENSE  apply-m.cabal
src/lib/Control/Monad/: Apply.hs
